updt pesquisa por nome do produto e de suas categorias